# coded-school-chicago

./: README.md  pyproject.toml
coded_school/: analysis.py  api_school_data.py  data.py  merged_data.csv  schools.py  website.py
coded_school/Data/: api_school_data.py  data.py
coded_school/Visualization/: app.py  choropleth.py
coded_school/data/: analysis.py  api_school_data.py  data.py  merged_data.csv
coded_school/sklearn-venv/: pyvenv.cfg
