[tool.poetry]
name = "coded_school"
version = "0.1.0"
description = ""
authors = ["apichat-klang <apichat@uchicago.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
lxml = "^5.1.0"
cssselect = "^1.2.0"
ipython = "^8.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
