[tool.poetry]
name = "coded_school"
version = "0.1.0"
description = ""
authors = ["apichat-klang <apichat@uchicago.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
lxml = "^5.1.0"
cssselect = "^1.2.0"
ipython = "^8.21.0"
pandas = "^2.2.0"
plotly = "^5.19.0"
dash = "^2.15.0"
beautifulsoup4 = "^4.12.3"
matplotlib = "^3.8.3"
scipy = "^1.12.0"
statsmodels = "^0.14.1"
black = "^24.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
